--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -15,53 +15,20 @@
 
     <main class="popup-content">
       <!-- Subscription Section -->
-      <section class="section">
+      <section class="section compact">
         <h2 class="section-title">Subscription</h2>
         <div id="subscription-info" class="subscription-card">
           <div class="subscription-badge">
             <span id="subscription-type">Free Tier</span>
           </div>
           <p class="subscription-desc" id="subscription-desc">
-            Rule-based prompt enhancement with basic features
+            Rule-based prompt enhancement
           </p>
-        </div>
-      </section>
-
-      <!-- BYOK Section -->
-      <section class="section" id="byok-section">
-        <div class="section-header">
-          <h2 class="section-title">🚀 Upgrade to BYOK</h2>
-          <button id="toggle-byok" class="toggle-btn">Setup</button>
-        </div>
-
-        <div id="byok-config" class="config-panel hidden">
-          <p class="help-text">
-            Bring your own Gemini API key for AI-powered enhancements.
-            <a href="https://aistudio.google.com/app/apikey" target="_blank" class="link">Get API Key →</a>
-          </p>
-
-          <div class="form-group">
-            <label for="gemini-api-key">Gemini API Key</label>
-            <input
-              type="password"
-              id="gemini-api-key"
-              placeholder="AIza...">
-            <button id="toggle-key-visibility" class="icon-btn" type="button">
-              👁️
-            </button>
-          </div>
-
-          <div class="button-group">
-            <button id="save-api-key" class="btn btn-primary">Save Key</button>
-            <button id="remove-api-key" class="btn btn-secondary hidden">Remove Key</button>
-          </div>
-
-          <div id="api-key-status" class="status-message hidden"></div>
         </div>
       </section>
 
       <!-- Prompt Template Section -->
-      <section class="section">
+      <section class="section compact">
         <h2 class="section-title">Prompt Template</h2>
         <p class="section-subtitle">Choose how we frame your request before sending it to Gemini.</p>
 
@@ -102,20 +69,20 @@
       </section>
 
       <!-- Settings Section -->
-      <section class="section">
+      <section class="section compact">
         <h2 class="section-title">Settings</h2>
 
         <div class="setting-item">
           <label for="enhancement-level">Enhancement Level</label>
           <select id="enhancement-level" class="select">
-            <option value="light">Light - Minimal changes</option>
-            <option value="moderate">Moderate - Balanced</option>
-            <option value="aggressive">Aggressive - Maximum detail</option>
+            <option value="light">Light</option>
+            <option value="moderate">Moderate</option>
+            <option value="aggressive">Aggressive</option>
           </select>
         </div>
 
         <div class="setting-item">
-          <label for="context-window">Context Window (messages)</label>
+          <label for="context-window">Context Window</label>
           <input
             type="number"
             id="context-window"
@@ -125,44 +92,79 @@
             class="input">
         </div>
 
-        <div class="setting-item">
+        <div class="setting-item checkbox-group">
           <label class="checkbox-label">
             <input type="checkbox" id="auto-enhance" class="checkbox">
             <span>Auto-enhance on focus</span>
           </label>
+
+          <label class="checkbox-label">
+            <input type="checkbox" id="show-diff" class="checkbox" checked>
+            <span>Show changes diff</span>
+          </label>
         </div>
 
         <div class="setting-item">
-          <label class="checkbox-label">
-            <input type="checkbox" id="show-diff" class="checkbox" checked>
-            <span>Show changes diff view</span>
-          </label>
+          <button id="reset-button-position" class="btn btn-secondary btn-full">Reset Button Position</button>
         </div>
 
         <button id="save-settings" class="btn btn-primary btn-full">Save Settings</button>
       </section>
 
       <!-- Stats Section -->
-      <section class="section">
+      <section class="section compact">
         <h2 class="section-title">Usage Statistics</h2>
         <div class="stats-grid">
           <div class="stat-card">
             <div class="stat-value" id="total-enhancements">0</div>
-            <div class="stat-label">Total Enhancements</div>
+            <div class="stat-label">Total</div>
           </div>
           <div class="stat-card">
             <div class="stat-value" id="byok-enhancements">0</div>
-            <div class="stat-label">BYOK Enhancements</div>
+            <div class="stat-label">BYOK</div>
           </div>
         </div>
       </section>
 
+      <!-- BYOK Section (moved to bottom) -->
+      <section class="section compact" id="byok-section">
+        <div class="section-header">
+          <h2 class="section-title">🚀 Upgrade to BYOK</h2>
+          <button id="toggle-byok" class="toggle-btn">Setup</button>
+        </div>
+
+        <div id="byok-config" class="config-panel hidden">
+          <p class="help-text">
+            Use your own Gemini API key for AI-powered enhancements.
+            <a href="https://aistudio.google.com/app/apikey" target="_blank" class="link">Get Key →</a>
+          </p>
+
+          <div class="form-group">
+            <label for="gemini-api-key">Gemini API Key</label>
+            <input
+              type="password"
+              id="gemini-api-key"
+              placeholder="AIza...">
+            <button id="toggle-key-visibility" class="icon-btn" type="button">
+              👁️
+            </button>
+          </div>
+
+          <div class="button-group">
+            <button id="save-api-key" class="btn btn-primary">Save Key</button>
+            <button id="remove-api-key" class="btn btn-secondary hidden">Remove Key</button>
+          </div>
+
+          <div id="api-key-status" class="status-message hidden"></div>
+        </div>
+      </section>
+
       <!-- Support Section -->
-      <section class="section">
+      <section class="section compact">
         <h2 class="section-title">Support</h2>
         <div class="support-links">
-          <a href="#" class="support-link">📖 Documentation</a>
-          <a href="#" class="support-link">🐛 Report Issue</a>
+          <a href="#" class="support-link">📖 Docs</a>
+          <a href="#" class="support-link">🐛 Report</a>
           <a href="#" class="support-link">💬 Feedback</a>
         </div>
       </section>
